# chatgpt-app

./: .gitignore  README.md
app/: .env.tpl  Makefile  README.md  pyproject.toml
app/.docker/: .env.tpl  Dockerfile  docker-compose.yml
app/src/: main.py
app/src/.streamlit/: secrets.toml.tpl
terraform/: .terraform-version  .terraform.lock.hcl  README.md  config.tf  locals.tf  main.tf  outputs.tf  terraform.tfvars.tpl  variables.tf
